fix: resolve Flutter warnings and add service anatomy documentation
- Fix ai_recommendation_service.dart unused field/variables warnings
- Remove unused imports in post_create_page.dart, search_repository.dart
- Update retrofit_generator to ^9.7.0 for compatibility
- Fix likes_api.dart with proper DTO classes (LikeResponse, UserLikeInfo)
- Update providers to use communityDioProvider
- Fix auth_notifier.dart StateNotifier implementation
- Update backend Java version to 21 in auth and community services
- Fix SecurityConfig.kt abstract class instantiation
- Add application.yml and SQL migration for community service
- Add comprehensive SERVICE_ANATOMY_MAP.md documentation
- Clean up unused flutter_temp artifacts and PRD files